Fixed spacing of project titles

--- a/main.css
+++ b/main.css
@@ -144,7 +144,7 @@ h2 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .project-title img {
